# folder-size-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
